Project

General

Profile

Actions

Bug #26897

closed

multisite: data full sync does not limit concurrent bucket sync

Added by Casey Bodley over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

RGWDataSyncShardCR::full_sync() will spawn a RGWDataSyncSingleEntryCR for every bucket shard in the full sync map, without enforcing the spawn_window to limit the number of concurrent buckets syncing.

It also drops the sync lease before a) waiting on the spawned CRs to complete, and b) writing the sync marker.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #36215: luminous: multisite: data full sync does not limit concurrent bucket syncResolvedJonathan BrielmaierActions
Copied to rgw - Backport #36216: mimic: multisite: data full sync does not limit concurrent bucket syncResolvedPrashant DActions
Actions #1

Updated by Casey Bodley over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Casey Bodley over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36215: luminous: multisite: data full sync does not limit concurrent bucket sync added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36216: mimic: multisite: data full sync does not limit concurrent bucket sync added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF